--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
           },
           body: JSON.stringify(data),
           mode: "cors",
-        })
-          .then((response) => response.text())
-          .then((text) => {
-            console.log(text);
-            document.getElementById("response").innerHTML = text;
-          })
-          .catch((error) => console.error("Error:", error));
+        }).then((response) => {
+          console.log(`response: ${response}`);
+          response.json().then((json) => {
+            console.log(`json: ${JSON.stringify(json)}`);
+            write_to_div(route, JSON.stringify(json));
+          });
+        });
+      }
+
+      function write_to_div(route, json) {
+        console.log(`IN write to div `);
+        console.log(`message in Write to Div: ${json}`);
+        let div = document.getElementById("response");
+        div.innerHTML = JSON.stringify(json);
       }
     </script>
     <style>
@@ -36,30 +43,32 @@
   <body>
     <div id="assistant">
       <label for="assistant_name">Assistant Name:</label>
-      <button onclick="sendRequest('create')">Create</button>
-      <button onclick="sendRequest('modify')">Modify</button>
-      <button onclick="sendRequest('list')">List</button>
-      <button onclick="sendRequest('delete')">Delete</button>
+      <button onclick="sendRequest('create_assistant')">Create</button>
+      <input type="text" id="create_assistant" name="assistant_name" />
+      <button onclick="sendRequest('modify_assistant')">Modify</button>
+      <button onclick="sendRequest('list_assistants')">List</button>
+      <input type="text" id="list_assistants" name="list_assistants" />
+      <button onclick="sendRequest('delete_assistant')">Delete</button>
     </div>
 
     <div id="assistant_file">
       <label for="assistant_file">Assistant File:</label>
-      <button onclick="sendRequest('uploadfile')">Upload</button>
-      <button onclick="sendRequest('createfile')">Create</button>
-      <button onclick="sendRequest('listfiles')">List</button>
-      <button onclick="sendRequest('deletefile')">Delete</button>
+      <button onclick="sendRequest('upload_file')">Upload</button>
+      <button onclick="sendRequest('create_file')">Create</button>
+      <button onclick="sendRequest('list_files')">List</button>
+      <button onclick="sendRequest('delete_file')">Delete</button>
     </div>
 
     <div id="thread">
       <label for="thread">Thread:</label>
-      <button onclick="sendRequest('createthread')">Create</button>
-      <button onclick="sendRequest('deletethread')">Delete</button>
+      <button onclick="sendRequest('create_thread')">Create</button>
+      <button onclick="sendRequest('delete_thread')">Delete</button>
     </div>
 
     <div id="run">
       <label for="run">Run:</label>
-      <button onclick="sendRequest('createrun')">Create</button>
-      <button onclick="sendRequest('cancelrun')">Cancel</button>
+      <button onclick="sendRequest('create_run')">Create</button>
+      <button onclick="sendRequest('delete_run')">Cancel</button>
     </div>
     <div id="response">
       <label for="response">Response from GPT:</label>
