focus on functions

--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
       <button onclick="sendRequest('get_messages')">Get Messages</button>
     </div>
     <div class="button-container">
-      <label for="func_name">Add function to Assistant:</label>
+      <label for="func_name">Add Tools:</label>
       <input type="text" id="func_name" name="func_names" />
       <button onclick="sendRequest('add_function')">Add function</button>
       <label for="functions">Run function:</label>
       <button onclick="sendRequest('run_function')">Run function</button>
-      <label for="tools">List toold:</label>
+      <label for="tools">List tools:</label>
       <button onclick="sendRequest('list_tools')">List Tools</button>
     </div>
     <label for="response">Response from GPT:</label>
