Outside calls not working

--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
     <div class="button-container">
       <label for="func_name">Add Tools:</label>
       <input type="text" id="func_name" name="func_names" />
-      <button onclick="sendRequest('add_function')">Add function</button>
-      <button onclick="sendRequest('run_function')">Run function</button>
-      <button onclick="sendRequest('list_tools')">List Tools</button>
+      <button onclick="sendRequest('run_function')">Not enabled</button>
+      <button onclick="sendRequest('list_tools')">Add Tools</button>
     </div>
     <label for="response">Response from GPT:</label>
     <div id="response"></div>
