--- a/index.html
+++ b/index.html
@@ -2,6 +2,39 @@
 <html>
   <head>
     <title>Managoing Assistants</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <style>
+      .label-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: left;
+        margin: 20px;
+      }
+      .button-container {
+        display: flex;
+        flex-direction: row;
+        align-items: left;
+        margin: 20px;
+      }
+
+      .button-container button {
+        background-color: rgb(0, 106, 255);
+        color: white;
+        align-items: left;
+      }
+      .div-container {
+        display: flex;
+        flex-direction: row;
+        align-items: left;
+        margin: 20px;
+      }
+    </style>
+    <!-- jQuery library -->
+
     <script>
       let data = {
         assistant_id: "",
@@ -59,65 +92,49 @@
         write_to_div(route, response.message);
       }
     </script>
-    <style>
-      .button-container {
-        display: flex;
-      }
-      div {
-        white-space: pre-wrap;
-        white-space: -moz-pre-wrap;
-        white-space: -pre-wrap;
-        white-space: -o-pre-wrap;
-        word-wrap: break-word;
-        color: blue;
-      }
-    </style>
   </head>
   <body>
+    <h4>MIT Assistant Builder Mark 1</h4>
+    <label for="assistant_id">Assistant ID:</label>
     <div id="assistant" class="button-container">
-      <label for="assistant_id">Assistant ID:</label>
-      <input type="text" id="assistant_id" name="assistant_id" />
       <button onclick="sendRequest('create_assistant')">Create</button>
       <button onclick="sendRequest('modify_assistant')">Modify</button>
       <button onclick="sendRequest('list_assistants')">List</button>
       <button onclick="sendRequest('delete_assistant')">Delete</button>
+      <input type="text" id="assistant_id" name="assistant_id" />
     </div>
-
+    <label for="file_id">File ID:</label>
     <div id="assistant_file" class="button-container">
-      <label for="file_id">File ID:</label>
-      <input type="text" id="file_id" name="file_id" />
       <button onclick="sendRequest('upload_file')">Upload</button>
       <button onclick="sendRequest('create_file')">Create</button>
       <button onclick="sendRequest('list_files')">List</button>
       <button onclick="sendRequest('delete_file')">Delete</button>
+      <input type="text" id="file_id" name="file_id" />
     </div>
-
+    <label for="thread_id">Thread ID:</label>
     <div id="thread" class="button-container">
-      <label for="thread_id">Thread ID:</label>
-      <input type="text" id="thread_id" name="thread_id" />
       <button onclick="sendRequest('create_thread')">Create</button>
       <button onclick="sendRequest('delete_thread')">Delete</button>
+      <input type="text" id="thread_id" name="thread_id" />
     </div>
-
+    <label for="run_id">Run ID:</label>
     <div class="button-container">
-      <label for="run_id">Run ID:</label>
-      <input type="text" id="run_id" name="run_id" />
-      <input type="text" id="run_status" name="run_status" />
       <button onclick="sendRequest('create_run')">Create</button>
       <button onclick="sendRequest('delete_run')">Cancel Run</button>
       <button onclick="sendRequest('run_status')">Get Status</button>
+      <input type="text" id="run_id" name="run_id" />
+      <input type="text" id="run_status" name="run_status" />
     </div>
+    <label for="message">Messages:</label>
     <div class="button-container">
-      <label for="message">Create Message:</label>
-      <input type="text" id="message" name="message" />
       <button onclick="sendRequest('create_message')">Create Message</button>
       <button onclick="sendRequest('get_messages')">Get Messages</button>
+      <input type="text" id="message" name="message" />
     </div>
+    <label for="func_name">Add Tools:</label>
     <div class="button-container">
-      <label for="func_name">Add Tools:</label>
-      <input type="text" id="func_name" name="func_names" />
-      <button onclick="sendRequest('run_function')">Not enabled</button>
       <button onclick="sendRequest('list_tools')">Add Tools</button>
+      <input type="text" id="func_name" name="func_names" />
     </div>
     <label for="response">Response from GPT:</label>
     <div id="response"></div>
