--- a/index.html
+++ b/index.html
@@ -86,17 +86,19 @@
       <div class="card-body">
         <section class="part2">
           <div class="container">
-            <div class="row">
-              <div class="col-md-4">
+            <div class="row" style="width: 70%">
+              <div class="col-sm-4">
                 <img
                   alt=""
-                  class="resize-image center-block"
+                  class="resize-image left-side"
                   id="image1"
                   src="logo001.jpg"
-                  width="100"
+                  width="70"
                   height="50"
                 />
-                <h3 class="text-center">MIT Assitant Builder R1</h3>
+              </div>
+              <div class="col-sm-4">
+                <h4 class="left-side-text">Assistants Builder Mark 1</h4>
               </div>
             </div>
           </div>
