--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Managoing Assistants MIT Mark 1</title>
+    <title>Managing Assistants MIT Mark 1</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -98,7 +98,7 @@
                 />
               </div>
               <div class="col-sm-4">
-                <h4 class="left-side-text">Assistants Builder Mark 1</h4>
+                <h4 class="left-side-text">MIT Assistants Builder Mark 1</h4>
               </div>
             </div>
           </div>
