--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 />
               </div>
               <div class="col-sm-4">
-                <h4 class="left-side-text">MIT Assistants Builder Mark 1</h4>
+                <h4 class="left-side-text">MIT Assistant Builder 0.0.1</h4>
               </div>
             </div>
           </div>
